standardizing percents to be XX% not 0.XX

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -204,7 +204,7 @@ cancer_acc_1 <- cancer_test_predictions %>%
 ```
 
 This shows that the accuracy of the classifier on the test data 
-was `r round(100*cancer_acc_1$.estimate, 2)`%.
+was `r round(100*cancer_acc_1$.estimate, 0)`%.
 We can also look at the *confusion matrix* for the classifier, which shows
 the table of predicted labels and correct labels, using the `conf_mat` function:
 
@@ -229,7 +229,7 @@ and `r confu12` observations as malignant when they were truly benign.
 
 **6. Critically analyze performance**
 
-We now know that the classifier was `r round(100*cancer_acc_1$.estimate,2)`% accurate
+We now know that the classifier was `r round(100*cancer_acc_1$.estimate,0)`% accurate
 on the test dataset. That sounds pretty good!...Wait, *is* it good? 
 Or do we need something higher?
 
@@ -279,9 +279,9 @@ the majority classifier would *always* predict that a new observation
 is benign. The estimated accuracy of the majority classifier is usually
 fairly close to the majority class proportion in the training data.
 In this case, we would suspect that the majority classifier will have 
-an accuracy of around `r round(cancer_propn_1[1,1], 2)`%.
+an accuracy of around `r round(cancer_propn_1[1,1], 0)`%.
 The K-nearest neighbours classifier we built does quite a bit better than this, 
-with an accuracy of `r round(100*cancer_acc_1$.estimate, 2)`%. 
+with an accuracy of `r round(100*cancer_acc_1$.estimate, 0)`%. 
 This means that from the perspective of accuracy,
 the K-nearest neighbours classifier improved quite a bit on the basic
 majority classifier. Hooray! But we still need to be cautious; in 
@@ -373,7 +373,7 @@ With five different shuffles of the data, we get five different values for
 accuracy. None of these is necessarily "more correct" than any other; they're
 just five estimates of the true, underlying accuracy of our classifier built
 using our overall training data. We can combine the estimates by taking their
-average (here `r mean(accuracies)`) to try to get a single assessment of our
+average (here `r round(100*mean(accuracies),0)`%) to try to get a single assessment of our
 classifier's accuracy; this has the effect of reducing the influence of any one
 (un)lucky validation set on the estimate.
 
@@ -430,7 +430,7 @@ a measure of how uncertain we are in the mean value. A detailed treatment of thi
 is beyond the scope of this chapter; but roughly, if your estimated mean (that
 the `collect_metrics` function gives you) is 0.88 and standard
 error is 0.02, you can expect the *true* average accuracy of the 
-classifier to be somewhere roughly between 0.86 and 0.90 (although it may
+classifier to be somewhere roughly between 86% and 90% (although it may
 fall outside this range).
 
 ```{r 06-vfold-metrics}
@@ -462,13 +462,13 @@ vfold_metrics
 ### Parameter value selection
 
 Using 5- and 10-fold cross-validation, we have estimated that the prediction
-accuracy of our classifier is somewhere around `r round(100*(vfold_metrics %>% filter(.metric == "accuracy"))$mean,2)`%. 
+accuracy of our classifier is somewhere around `r round(100*(vfold_metrics %>% filter(.metric == "accuracy"))$mean,0)`%. 
 Whether that is good or not
 depends entirely on the downstream application of the data analysis. In the
 present situation, we are trying to predict a tumour diagnosis, with expensive,
 damaging chemo/radiation therapy or patient death as potential consequences of
 misprediction. Hence, we might like to 
-do better than `r round(100*(vfold_metrics %>% filter(.metric == "accuracy"))$mean,2)`% for this application.  
+do better than `r round(100*(vfold_metrics %>% filter(.metric == "accuracy"))$mean,0)`% for this application.  
 
 In order to improve our classifier, we have one choice of parameter: the number of
 neighbours, $K$. Since cross-validation helps us evaluate the accuracy of our
