--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -327,6 +327,8 @@ sacr_tunek_plot <- ggplot(sacr_results, aes(x = neighbors, y = mean)) +
   geom_line() +
   labs(x = "Neighbours", y = "RMSPE")
 
+kmin <- sacr_min %>% pull(neighbors)
+
 sacr_tunek_plot
 ```
 
@@ -334,11 +336,10 @@ Figure \@ref(fig:07-howK) visualizes the effect of different settings of $K$ on 
 regression model. Each plot shows the predicted values for house price from
 our K-NN regression model for 6 different values for $K$: 1, 3, `r kmin`, 41, 250, and 450.
 For each model, we predict a price for every possible home size across the range of home sizes we
-observed in the data set (here 500 to 4250 square feet) and we plot the
+observed in the data set (here 500 to 5000 square feet) and we plot the
 predicted prices as a blue line.
 
 ```{r 07-howK, echo = FALSE, fig.height = 12, fig.width = 10,fig.cap = "Predicted values for house price (represented as a blue line) from K-NN regression models for six different values for $K$"}
-kmin <- sacr_min %>% pull(neighbors)
 gridvals <- c(1, 3, kmin, 41, 250, 450)
 
 plots <- list()
@@ -383,7 +384,7 @@ in the context of regression. We also sometimes say that the predictions have
 What about the plot in Figure \@ref(fig:07-howK) where $K$ is quite large, say, $K$ = 450? 
 In this case  the blue line is extremely smooth, and almost
 flat. This happens because our predicted values for a given x value (here home
-size), depend on many many (450) neighbouring observations. 
+size), depend on many neighbouring observations. 
 In contrast to the $K=1$ example, 
 the smooth, inflexible blue line does not follow the training observations very
 closely, and changing a single training data point
