added mention of slow model training when talking about best subset sel

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -792,9 +792,8 @@ in particular cases of interest; see the additional resources at the end of
 this chapter to find out where you can learn more about variable selection.
 Here we will discuss *best subset selection,* which is applicable to any 
 classification method (K-NN or otherwise), and works when you have a small
-number of total variables from which you want to keep only the relevant ones (to
-avoid the problem in the example above). Best subset selection works 
-as follows. If you have $m$ predictors, you: 
+number of total variables (i.e., at most 10) from which you want to keep only the relevant ones. 
+Best subset selection works as follows. If you have $m$ predictors, you: 
 
 1. create a separate model for every possible subset of predictors,
 2. tune each one using cross validation, and 
@@ -802,7 +801,8 @@ as follows. If you have $m$ predictors, you:
 
 Note that best subset selection becomes very slow when you have even a moderate
 number of predictors to choose from. This is because the number of possible predictor subsets
-grows very quickly with the number of predictors. For example, if we have $m=2$ predictors---let's call
+grows very quickly with the number of predictors, and you have to train the model (itself
+a slow process!) for each one. For example, if we have $m=2$ predictors---let's call
 them A and B---then we have 3 variable sets to try: A alone, B alone, and finally A
 and B together. If we have $m=3$ predictors---A, B, and C---then we have 7
 to try: A, B, C, AB, BC, AC, and ABC. In general, the number of models
