minor ed to predictor selection to reference majority classifier

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -716,7 +716,7 @@ cross-validation. Figure \@ref(fig:06-performance-irrelevant-features)
 shows the estimated cross-validation accuracy versus 
 the number of irrelevant predictors.
 Once we add sufficiently many irrelevant predictor variables, our classifier
-does not do much better than just always guessing "benign", 
+does not do much better than the majority classifier that just always predicts "benign," 
  the most common class label in the data (63% of observations are benign).
 
 <center>
