--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -62,6 +62,8 @@ in Figure \@ref(fig:08-lin-reg1).
 
 ```{r 08-lin-reg1, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price versus house size with line of best fit for subset of the Sacramento housing data"}
 library(tidyverse)
+library(tidymodels)
+library(scales)
 library(gridExtra)
 library(caret)
 
@@ -249,6 +251,11 @@ set.seed(1234)
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 30) %>%
   set_engine("kknn") %>%
   set_mode("regression")
+
+
+sacr_recipe <- recipe(price ~ sqft, data = sacramento_train) %>%
+  step_scale(all_predictors()) %>%
+  step_center(all_predictors())
 
 sacr_wkflw <- workflow() %>%
   add_recipe(sacr_recipe) %>%
